fixed some spacing isses

--- a/src/styles/trips.css
+++ b/src/styles/trips.css
@@ -1,7 +1,7 @@
 /* explore page */
-.content{
+/* .content{
     margin-left: 700px;
-}
+} */
 .header{
     background-color: transparent;
     color: black;
@@ -9,7 +9,8 @@
 
 .trips-container {
     padding: 20px;
-    width: 100%;
+    /* width: 100%; */
+    margin-left: 700px;
     /* overflow-x: auto; */
     /* overflow-y: hidden; */
     /* white-space: nowrap; */
